--- a/index.html
+++ b/index.html
@@ -14,11 +14,32 @@
 </head>
 <body>
 
-  <header></header>
+  <header>
+    <div class="container titolo">
+      <h1>FontIcons</h1>
+    </div>
+    <div class="container submenu text-uppercase d-flex justify-content-center flex-wrap   py-3">
+      <h6 class="mx-3 text-light">filtra per tipo</h6>
+      <select id="selezione">
+        <option value="tutti">Tutti</option>
+        <option class="" value="animali">Animali</option>
+        <option class="" value="vegetali">Vegetali</option>
+        <option class="" value="utenti">Utenti</option>
+      </select>
+    </div>
+  </header>
 
-  <main></main>
+  <main>
+
+    <div class="container">
+      <div id="box" class="row row-cols-6 g-3 p-4">
+
+      </div>
+    </div>
+
+  </main>
 
   <footer></footer>
 
-  <script src="js/script.js"></script>
+  <script src="js/data.js"></script>
 </body>
