--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
 
   <main>
 
-    <div class="container">
-      <div id="box" class="row row-cols-6 g-3 p-4">
+    <div class="container d-flex flex-wrap">
 
-      </div>
     </div>
 
   </main>
