modifica-codice/abbellimento-grafico

--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="css/style.css">
-  <title></title>
+  <title>FontIcons</title>
 </head>
 <body>
 
   <header>
+
     <div class="container titolo">
       <h1>FontIcons</h1>
     </div>
-    <div class="container submenu text-uppercase d-flex justify-content-center flex-wrap   py-3">
-      <h6 class="mx-3 text-light">filtra per tipo</h6>
+
+    <div class="container submenu text-uppercase d-flex justify-content-center  py-3">
+      <h6 class="mx-4 my-2 text-light">filtra per tipo</h6>
+
       <select id="selezione">
         <option value="tutti">Tutti</option>
         <option class="" value="animali">Animali</option>
@@ -27,17 +30,17 @@
         <option class="" value="utenti">Utenti</option>
       </select>
     </div>
+
   </header>
 
   <main>
 
-    <div class="container d-flex flex-wrap">
-
-    </div>
+    <div class="container d-flex flex-wrap"></div>
 
   </main>
 
   <footer></footer>
 
   <script src="js/data.js"></script>
+  
 </body>
